syntax = "proto3";

option csharp_namespace = "VinhNgo.Sample.gRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc BulkCreate(stream CreateRequest) returns (CountCreated);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CreateRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
  string password = 5;
}

message CountCreated {
  int32 count = 1;
}